test/files/neg/names-package-method-conflict.scala
package object foo {
	def bar: Unit = {}
}

package foo {

	package bar{
		class Baz
	}
}
