test/files/neg/names-package-method-conflict.check
names-package-method-conflict.scala:7: error: There is name conflict between the foo.bar and the package foo.bar.
	package bar{
                ^
1 error
